@@ -1,25 +1,13 @@
-/*******************************************************************************
- *     Cloud Foundry
- *     Copyright (c) [2009-2016] Pivotal Software, Inc. All Rights Reserved.
- *
- *     This product is licensed to you under the Apache License, Version 2.0 (the "License").
- *     You may not use this product except in compliance with the License.
- *
- *     This product includes a number of subcomponents with
- *     separate copyright notices and license terms. Your use of these
- *     subcomponents is subject to the terms and conditions of the
- *     subcomponent's license, as noted in the LICENSE file.
- *******************************************************************************/
-
 package org.cloudfoundry.identity.uaa.resources.jdbc;
 
+import com.unboundid.scim.sdk.AttributePath;
 import com.unboundid.scim.sdk.InvalidResourceException;
 import com.unboundid.scim.sdk.SCIMException;
 import com.unboundid.scim.sdk.SCIMFilter;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 import org.cloudfoundry.identity.uaa.resources.AttributeNameMapper;
 import org.cloudfoundry.identity.uaa.resources.SimpleAttributeNameMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.security.oauth2.common.util.RandomValueStringGenerator;
 import org.springframework.util.LinkedMultiValueMap;
 import org.springframework.util.MultiValueMap;
@@ -28,7 +16,6 @@ import org.springframework.util.StringUtils;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
@@ -36,15 +23,16 @@ import java.util.List;
 import java.util.Map;
 
 import static com.unboundid.scim.sdk.SCIMException.createException;
+import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.Optional.ofNullable;
 import static org.cloudfoundry.identity.uaa.resources.jdbc.SearchQueryConverter.ProcessedFilter.ORDER_BY;
+import static org.springframework.util.StringUtils.hasText;
 
 public class SimpleSearchQueryConverter implements SearchQueryConverter {
 
     //LOWER
-    public static final List<String> VALID_ATTRIBUTE_NAMES = Collections.unmodifiableList(
-        Arrays.asList(
+    private static final List<String> VALID_ATTRIBUTE_NAMES = List.of(
             "id",
             "created",
             "lastmodified",
@@ -93,19 +81,24 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
             "gm.external_group",
             "gm.origin",
             "g.displayname",
-            "g.id"
-        )
-    );
+            "g.id",
+            "external_id");
 
-    private static Log logger = LogFactory.getLog(SimpleSearchQueryConverter.class);
-    private AttributeNameMapper mapper = new SimpleAttributeNameMapper(Collections.<String, String> emptyMap());
+    private static Logger logger = LoggerFactory.getLogger(SimpleSearchQueryConverter.class);
+    private AttributeNameMapper mapper = new SimpleAttributeNameMapper(Collections.emptyMap());
 
     private boolean dbCaseInsensitive = false;
+    private RandomValueStringGenerator randomStringGenerator;
 
     public SimpleSearchQueryConverter() {
+        randomStringGenerator = new RandomValueStringGenerator();
     }
 
-    public boolean isDbCaseInsensitive() {
+    public SimpleSearchQueryConverter(RandomValueStringGenerator randomStringGenerator) {
+        this.randomStringGenerator = randomStringGenerator;
+    }
+
+    private boolean isDbCaseInsensitive() {
         return dbCaseInsensitive;
     }
 
@@ -118,49 +111,61 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
     }
 
     @Override
-    public ProcessedFilter convert(String filter, String sortBy, boolean ascending) {
-        return convert(filter, sortBy, ascending, mapper);
-    }
-
-    @Override
-    public ProcessedFilter convert(String filter, String sortBy, boolean ascending, AttributeNameMapper mapper) {
+    public ProcessedFilter convert(String filter, String sortBy, boolean ascending, String zoneId) {
         String paramPrefix = generateParameterPrefix(filter);
         Map<String, Object> values = new HashMap<>();
-        String where = StringUtils.hasText(filter) ? getWhereClause(filter, sortBy, ascending, values, mapper, paramPrefix) : null;
-        ProcessedFilter pf = new ProcessedFilter(where, values, StringUtils.hasText(sortBy));
+        String where = getWhereClause(filter, sortBy, ascending, values, mapper, paramPrefix, zoneId);
+        ProcessedFilter pf = new ProcessedFilter(where, values, hasText(sortBy));
         pf.setParamPrefix(paramPrefix);
         return pf;
     }
 
-    protected String generateParameterPrefix(String filter) {
+    private String generateParameterPrefix(String filter) {
         while (true) {
-            String s = new RandomValueStringGenerator().generate().toLowerCase();
-            if (!filter.contains(s)) {
-                return "__"+s+"_";
+            String s = randomStringGenerator.generate().toLowerCase();
+            if (!filter.contains(s) && !s.contains("-")) {
+                return "__" + s + "_";
             }
         }
     }
 
-    private String getWhereClause(String filter, String sortBy, boolean ascending, Map<String, Object> values, AttributeNameMapper mapper, String paramPrefix) {
+    private String getWhereClause(
+            final String filter,
+            final String sortBy,
+            final boolean ascending,
+            final Map<String, Object> values,
+            final AttributeNameMapper mapper,
+            final String paramPrefix,
+            final String zoneId) {
 
         try {
-            SCIMFilter scimFilter = scimFilter(filter);
-            String whereClause = createFilter(scimFilter, values, mapper, paramPrefix);
+            final SCIMFilter zoneIdFilter = SCIMFilter.createEqualityFilter(
+                    AttributePath.parse("identity_zone_id"),
+                    zoneId);
+            SCIMFilter fullFilter;
+            if (hasText(filter)) {
+                fullFilter = SCIMFilter.createAndFilter(asList(scimFilter(filter), zoneIdFilter));
+            } else {
+                fullFilter = zoneIdFilter;
+            }
+
+            String whereClause = whereClauseFromFilter(fullFilter, values, mapper, paramPrefix);
             if (sortBy != null) {
-                sortBy = mapper.mapToInternal(sortBy);
+                final String internalSortBy = mapper.mapToInternal(sortBy);
                 // Need to add "asc" or "desc" explicitly to ensure that the pattern
                 // splitting below works
-                whereClause += ORDER_BY + sortBy + (ascending ? " ASC" : " DESC");
+                whereClause += ORDER_BY + internalSortBy + (ascending ? " ASC" : " DESC");
             }
+
             return whereClause;
         } catch (SCIMException e) {
             logger.debug("Unable to parse " + filter, e);
-            throw new IllegalArgumentException("Invalid SCIM Filter:"+filter+" Message:"+e.getMessage());
+            throw new IllegalArgumentException("Invalid SCIM Filter: " + filter + "; Message: " + e.getMessage());
         }
     }
 
     @Override
-    public MultiValueMap<String,Object> getFilterValues(String filter, List<String> validAttributes) throws IllegalArgumentException {
+    public MultiValueMap<String, Object> getFilterValues(String filter, List<String> validAttributes) throws IllegalArgumentException {
         try {
             SCIMFilter scimFilter = SCIMFilter.parse(filter);
             validateFilterAttributes(scimFilter, validAttributes);
@@ -172,13 +177,13 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
         }
     }
 
-    protected SCIMFilter scimFilter(String filter) throws SCIMException {
+    private SCIMFilter scimFilter(String filter) throws SCIMException {
         SCIMFilter scimFilter;
         try {
             scimFilter = SCIMFilter.parse(filter);
         } catch (SCIMException e) {
             logger.debug("Attempting legacy scim filter conversion for [" + filter + "]", e);
-            filter = filter.replaceAll("'","\"");
+            filter = filter.replaceAll("'", "\"");
             scimFilter = SCIMFilter.parse(filter);
         }
         validateFilterAttributes(scimFilter, VALID_ATTRIBUTE_NAMES);
@@ -189,14 +194,14 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
         List<String> invalidAttributes = new LinkedList<>();
         validateFilterAttributes(filter, invalidAttributes, validAttributeNames);
         if (!invalidAttributes.isEmpty()) {
-            throw new InvalidResourceException("Invalid filter attributes:"+StringUtils.collectionToCommaDelimitedString(invalidAttributes));
+            throw new InvalidResourceException("Invalid filter attributes:" + StringUtils.collectionToCommaDelimitedString(invalidAttributes));
         }
     }
 
     private void validateFilterAttributes(SCIMFilter filter, List<String> invalidAttribues, List<String> validAttributeNames) {
-        if (filter.getFilterAttribute()!=null && filter.getFilterAttribute().getAttributeName()!=null) {
+        if (filter.getFilterAttribute() != null && filter.getFilterAttribute().getAttributeName() != null) {
             String name = filter.getFilterAttribute().getAttributeName();
-            if (filter.getFilterAttribute().getSubAttributeName()!=null) {
+            if (filter.getFilterAttribute().getSubAttributeName() != null) {
                 name = name + "." + filter.getFilterAttribute().getSubAttributeName();
             }
             if (!validAttributeNames.contains(name.toLowerCase())) {
@@ -208,7 +213,7 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
         }
     }
 
-    private void extractValues(SCIMFilter filter, MultiValueMap<String,Object> values) throws SCIMException {
+    private void extractValues(SCIMFilter filter, MultiValueMap<String, Object> values) throws SCIMException {
         switch (filter.getFilterType()) {
             case AND:
                 extractValues(filter.getFilterComponents().get(0), values);
@@ -236,16 +241,16 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
             case LESS_OR_EQUAL:
                 throw createException(400, "[le] operator is not supported.");
             default:
-                throw createException(400, "Unknown filter operator:"+filter.getFilterType());
+                throw createException(400, "Unknown filter operator:" + filter.getFilterType());
         }
     }
 
-    private String createFilter(SCIMFilter filter, Map<String,Object> values, AttributeNameMapper mapper, String paramPrefix) {
+    private String whereClauseFromFilter(SCIMFilter filter, Map<String, Object> values, AttributeNameMapper mapper, String paramPrefix) {
         switch (filter.getFilterType()) {
             case AND:
-                return "(" + createFilter(filter.getFilterComponents().get(0), values, mapper, paramPrefix) + " AND " + createFilter(filter.getFilterComponents().get(1), values, mapper, paramPrefix) + ")";
+                return "(" + whereClauseFromFilter(filter.getFilterComponents().get(0), values, mapper, paramPrefix) + " AND " + whereClauseFromFilter(filter.getFilterComponents().get(1), values, mapper, paramPrefix) + ")";
             case OR:
-                return "(" + createFilter(filter.getFilterComponents().get(0), values, mapper, paramPrefix) + " OR " + createFilter(filter.getFilterComponents().get(1), values, mapper, paramPrefix) + ")";
+                return "(" + whereClauseFromFilter(filter.getFilterComponents().get(0), values, mapper, paramPrefix) + " OR " + whereClauseFromFilter(filter.getFilterComponents().get(1), values, mapper, paramPrefix) + ")";
             case EQUALITY:
                 return comparisonClause(filter, "=", values, "", "", paramPrefix);
             case CONTAINS:
@@ -266,14 +271,14 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
         return null;
     }
 
-    protected String comparisonClause(SCIMFilter filter,
-                                      String comparator,
-                                      Map<String, Object> values,
-                                      String valuePrefix,
-                                      String valueSuffix,
-                                      String paramPrefix) {
+    private String comparisonClause(SCIMFilter filter,
+                                    String comparator,
+                                    Map<String, Object> values,
+                                    String valuePrefix,
+                                    String valueSuffix,
+                                    String paramPrefix) {
         String pName = getParamName(values, paramPrefix);
-        String paramName = ":"+pName;
+        String paramName = ":" + pName;
         if (filter.getFilterValue() == null) {
             return getAttributeName(filter, mapper) + " IS NULL";
         } else if (filter.isQuoteFilterValue()) {
@@ -281,22 +286,22 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
             if (value instanceof String) {
                 //lower is used to satisfy the requirement that all quoted values are compared case insensitive
                 switch (filter.getFilterAttribute().getAttributeName().toLowerCase()) {
-                    case "client_secret" :
-                    case "password" :
-                    case "salt" :
+                    case "client_secret":
+                    case "password":
+                    case "salt":
                         value = "";
                     default:
                         break;
                 }
-                values.put(pName, valuePrefix+value+valueSuffix);
+                values.put(pName, valuePrefix + value + valueSuffix);
                 if (isDbCaseInsensitive()) {
-                    return "" + getAttributeName(filter, mapper) + " "+comparator+" " + paramName+"";
+                    return "" + getAttributeName(filter, mapper) + " " + comparator + " " + paramName + "";
                 } else {
                     return "LOWER(" + getAttributeName(filter, mapper) + ") " + comparator + " LOWER(" + paramName + ")";
                 }
             } else {
                 values.put(pName, value);
-                return getAttributeName(filter, mapper) + " "+comparator+" " + paramName;
+                return getAttributeName(filter, mapper) + " " + comparator + " " + paramName;
             }
         } else {
             try {
@@ -307,29 +312,29 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
                 } else if ("false".equalsIgnoreCase(filter.getFilterValue())) {
                     values.put(pName, Boolean.FALSE);
                 } else {
-                    throw new IllegalArgumentException("Invalid non quoted value ["+filter.getFilterAttribute()+
-                        " : "+filter.getFilterValue()+"]");
+                    throw new IllegalArgumentException("Invalid non quoted value [" + filter.getFilterAttribute() +
+                            " : " + filter.getFilterValue() + "]");
                 }
             }
-            return getAttributeName(filter, mapper) + " "+comparator+" " + paramName;
+            return getAttributeName(filter, mapper) + " " + comparator + " " + paramName;
         }
     }
 
-    protected String getAttributeName(SCIMFilter filter, AttributeNameMapper mapper) {
+    private String getAttributeName(SCIMFilter filter, AttributeNameMapper mapper) {
         String name = filter.getFilterAttribute().getAttributeName();
         String subName = filter.getFilterAttribute().getSubAttributeName();
-        if (StringUtils.hasText(subName)) {
+        if (hasText(subName)) {
             name = name + "." + subName;
         }
         name = mapper.mapToInternal(name);
         return name.replace("meta.", "");
     }
 
-    protected String getParamName(Map<String, Object> values, String paramPrefix) {
-        return paramPrefix+values.size();
+    private String getParamName(Map<String, Object> values, String paramPrefix) {
+        return paramPrefix + values.size();
     }
 
-    protected Object getStringOrDate(String s) {
+    private Object getStringOrDate(String s) {
         try {
             DateFormat TIMESTAMP_FORMAT = new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSS'Z'");
             return TIMESTAMP_FORMAT.parse(s);
@@ -340,6 +345,6 @@ public class SimpleSearchQueryConverter implements SearchQueryConverter {
 
     @Override
     public String map(String attribute) {
-        return StringUtils.hasText(attribute) ? mapper.mapToInternal(attribute) : attribute;
+        return hasText(attribute) ? mapper.mapToInternal(attribute) : attribute;
     }
 }
