@@ -21,7 +21,7 @@ import org.cloudfoundry.identity.uaa.integration.util.ScreenshotOnFail;
 import org.cloudfoundry.identity.uaa.oauth.jwt.Jwt;
 import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
 import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
-import org.cloudfoundry.identity.uaa.provider.AbstractXOAuthIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.AbstractExternalOAuthIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.SamlIdentityProviderDefinition;
@@ -32,6 +32,7 @@ import org.cloudfoundry.identity.uaa.test.UaaTestAccounts;
 import org.cloudfoundry.identity.uaa.util.JsonUtils;
 import org.cloudfoundry.identity.uaa.zone.IdentityZone;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneConfiguration;
+import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
 import org.hamcrest.Matchers;
 import org.junit.After;
 import org.junit.Assert;
@@ -58,6 +59,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.net.UnknownHostException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -65,6 +67,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+
+import static org.cloudfoundry.identity.uaa.integration.util.IntegrationTestUtils.SIMPLESAMLPHP_LOGIN_PROMPT_XPATH_EXPR;
 import static org.cloudfoundry.identity.uaa.integration.util.IntegrationTestUtils.isMember;
 import static org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants.SUB;
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_AUTHORIZATION_CODE;
@@ -74,7 +78,6 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.startsWith;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertThat;
@@ -115,7 +118,7 @@ public class OIDCLoginIT {
     private String adminToken;
     private String subdomain;
     private String zoneUrl;
-    private IdentityProvider<AbstractXOAuthIdentityProviderDefinition> identityProvider;
+    private IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider;
     private String clientCredentialsToken;
     private BaseClientDetails zoneClient;
     private ScimGroup createdGroup;
@@ -227,7 +230,7 @@ public class OIDCLoginIT {
         //Predix version does not have logout link
         //webDriver.findElement(By.cssSelector(".dropdown-trigger")).click();
         //webDriver.findElement(By.linkText("Sign Out")).click();
-        IntegrationTestUtils.validateAccountChooserCookie(zoneUrl, webDriver);
+        IntegrationTestUtils.validateAccountChooserCookie(zoneUrl, webDriver, IdentityZoneHolder.get());
     }
 
     private void login(String zoneUrl, String userName, String password) {
@@ -254,7 +257,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProvider() throws Exception {
+    public void successfulLoginWithOIDCProvider() {
         Long beforeTest = System.currentTimeMillis();
         validateSuccessfulOIDCLogin(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         Long afterTest = System.currentTimeMillis();
@@ -267,7 +270,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testLoginWithInactiveProviderDoesNotWork() throws Exception {
+    public void testLoginWithInactiveProviderDoesNotWork() {
         webDriver.get(zoneUrl + "/logout.do");
         webDriver.get(zoneUrl + "/");
         Cookie beforeLogin = webDriver.manage().getCookieNamed("JSESSIONID");
@@ -291,9 +294,9 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testLoginWithLoginHintUaa() throws Exception {
+    public void testLoginWithLoginHintUaa() {
         webDriver.get(zoneUrl + "/logout.do");
-        String loginHint = URLEncoder.encode("{\"origin\":\"puppy\"}", "utf-8");
+        String loginHint = URLEncoder.encode("{\"origin\":\"puppy\"}", StandardCharsets.UTF_8);
 
         webDriver.get(zoneUrl + "/login?login_hint=" + loginHint);
 
@@ -301,7 +304,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderWithExternalGroups() throws Exception {
+    public void successfulLoginWithOIDCProviderWithExternalGroups() {
 
         validateSuccessfulOIDCLogin(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         String adminToken = IntegrationTestUtils.getClientCredentialsToken(serverRunning, "admin", "adminsecret");
@@ -313,7 +316,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderAndClientAuthInBody() throws Exception {
+    public void successfulLoginWithOIDCProviderAndClientAuthInBody() {
         identityProvider.getConfig().setClientAuthInBody(true);
         assertTrue(identityProvider.getConfig().isClientAuthInBody());
         updateProvider();
@@ -322,7 +325,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderSetsLastLogin() throws Exception {
+    public void successfulLoginWithOIDCProviderSetsLastLogin() {
         login(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         doLogout(zoneUrl);
         login(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
@@ -355,7 +358,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testShadowUserNameDefaultsToOIDCSubjectClaim() throws Exception {
+    public void testShadowUserNameDefaultsToOIDCSubjectClaim() {
         Map<String, Object> attributeMappings = new HashMap<>(identityProvider.getConfig().getAttributeMappings());
         attributeMappings.remove(USER_NAME_ATTRIBUTE_NAME);
         identityProvider.getConfig().setAttributeMappings(attributeMappings);
@@ -431,7 +434,7 @@ public class OIDCLoginIT {
             Assert.assertThat(webDriver.getCurrentUrl(), containsString(baseUrl));
 
             webDriver.findElement(By.linkText("SAML Login")).click();
-            webDriver.findElement(By.xpath("//h2[contains(text(), 'Enter your username and password')]"));
+            webDriver.findElement(By.xpath(SIMPLESAMLPHP_LOGIN_PROMPT_XPATH_EXPR));
             webDriver.findElement(By.name("username")).clear();
             webDriver.findElement(By.name("username")).sendKeys("marissa6");
             webDriver.findElement(By.name("password")).sendKeys("saml6");
@@ -483,7 +486,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testResponseTypeRequired() throws Exception {
+    public void testResponseTypeRequired() {
         BaseClientDetails uaaClient = new BaseClientDetails(new RandomValueStringGenerator().generate(), null, "openid,user_attributes", "authorization_code,client_credentials", "uaa.admin,scim.read,scim.write,uaa.resource", baseUrl);
         uaaClient.setClientSecret("secret");
         uaaClient.setAutoApproveScopes(Collections.singleton("true"));
@@ -515,7 +518,7 @@ public class OIDCLoginIT {
         config.setRelyingPartyId("8c5ea049-869e-47f8-a492-852a05f507af");
         config.setRelyingPartySecret(null);
         config.setIssuer("https://sts.windows.net/9bc40aaf-e150-4c30-bb3c-a8b3b677266e/");
-        config.setScopes(Arrays.asList("openid"));
+        config.setScopes(Collections.singletonList("openid"));
         config.setResponseType("code id_token");
         return config;
     }
