@@ -12,7 +12,13 @@ import org.cloudfoundry.identity.uaa.audit.event.AbstractUaaEvent;
 import org.cloudfoundry.identity.uaa.client.ClientMetadata;
 import org.cloudfoundry.identity.uaa.client.InvalidClientDetailsException;
 import org.cloudfoundry.identity.uaa.client.UaaScopes;
-import org.cloudfoundry.identity.uaa.client.event.*;
+import org.cloudfoundry.identity.uaa.client.event.ClientAdminEventPublisher;
+import org.cloudfoundry.identity.uaa.client.event.ClientApprovalsDeletedEvent;
+import org.cloudfoundry.identity.uaa.client.event.ClientCreateEvent;
+import org.cloudfoundry.identity.uaa.client.event.ClientDeleteEvent;
+import org.cloudfoundry.identity.uaa.client.event.ClientUpdateEvent;
+import org.cloudfoundry.identity.uaa.client.event.SecretChangeEvent;
+import org.cloudfoundry.identity.uaa.client.event.SecretFailureEvent;
 import org.cloudfoundry.identity.uaa.error.UaaException;
 import org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils;
 import org.cloudfoundry.identity.uaa.oauth.client.ClientDetailsModification;
@@ -26,13 +32,17 @@ import org.cloudfoundry.identity.uaa.scim.endpoints.ScimGroupEndpoints;
 import org.cloudfoundry.identity.uaa.scim.endpoints.ScimUserEndpoints;
 import org.cloudfoundry.identity.uaa.test.TestClient;
 import org.cloudfoundry.identity.uaa.test.UaaTestAccounts;
+import org.cloudfoundry.identity.uaa.test.ZoneSeeder;
+import org.cloudfoundry.identity.uaa.test.ZoneSeederExtension;
 import org.cloudfoundry.identity.uaa.util.JsonUtils;
 import org.cloudfoundry.identity.uaa.util.PredicateMatcher;
 import org.cloudfoundry.identity.uaa.zone.ClientSecretPolicy;
 import org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -53,19 +63,44 @@ import org.springframework.util.StringUtils;
 import org.springframework.web.context.WebApplicationContext;
 
 import javax.servlet.http.HttpServletResponse;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Date;
+import java.util.HashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
 
-import static org.cloudfoundry.identity.uaa.mock.util.ClientDetailsHelper.*;
+import static org.cloudfoundry.identity.uaa.mock.util.ClientDetailsHelper.arrayFromString;
+import static org.cloudfoundry.identity.uaa.mock.util.ClientDetailsHelper.clientArrayFromString;
+import static org.cloudfoundry.identity.uaa.mock.util.ClientDetailsHelper.clientFromString;
+import static org.cloudfoundry.identity.uaa.mock.util.MockMvcUtils.httpBearer;
 import static org.cloudfoundry.identity.uaa.oauth.client.SecretChangeRequest.ChangeMode.ADD;
 import static org.cloudfoundry.identity.uaa.oauth.client.SecretChangeRequest.ChangeMode.DELETE;
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_AUTHORIZATION_CODE;
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_JWT_BEARER;
-import static org.hamcrest.Matchers.*;
+import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.hasEntry;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.iterableWithSize;
 import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.*;
-import static org.mockito.Mockito.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -420,7 +455,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Failure_with_Min_Length_Secret() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         result.getIdentityZone().getConfig().setClientSecretPolicy(new ClientSecretPolicy(7, 255, 0, 0, 0, 0, 6));
         MockMvcUtils.setZoneConfiguration(webApplicationContext, result.getIdentityZone().getId(), result.getIdentityZone().getConfig());
 
@@ -434,7 +469,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Failure_with_Secret_Too_Long() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         result.getIdentityZone().getConfig().setClientSecretPolicy(new ClientSecretPolicy(0, 5, 0, 0, 0, 0, 6));
         MockMvcUtils.setZoneConfiguration(webApplicationContext, result.getIdentityZone().getId(), result.getIdentityZone().getConfig());
 
@@ -448,7 +483,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Failure_with_Secret_Requires_Uppercase_Character() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         result.getIdentityZone().getConfig().setClientSecretPolicy(new ClientSecretPolicy(0, 255, 1, 0, 0, 0, 6));
         MockMvcUtils.setZoneConfiguration(webApplicationContext, result.getIdentityZone().getId(), result.getIdentityZone().getConfig());
 
@@ -462,7 +497,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Failure_with_Secret_Requires_Lowercase_Character() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         result.getIdentityZone().getConfig().setClientSecretPolicy(new ClientSecretPolicy(0, 255, 0, 1, 0, 0, 6));
         MockMvcUtils.setZoneConfiguration(webApplicationContext, result.getIdentityZone().getId(), result.getIdentityZone().getConfig());
 
@@ -476,7 +511,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Success_with_Complex_Secret_Policy() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         result.getIdentityZone().getConfig().setClientSecretPolicy(new ClientSecretPolicy(6, 255, 1, 1, 1, 1, 6));
         MockMvcUtils.setZoneConfiguration(webApplicationContext, result.getIdentityZone().getId(), result.getIdentityZone().getConfig());
 
@@ -490,7 +525,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Failure_with_Secret_Requires_Special_Character() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         result.getIdentityZone().getConfig().setClientSecretPolicy(new ClientSecretPolicy(0, 255, 0, 0, 0, 1, 6));
         MockMvcUtils.setZoneConfiguration(webApplicationContext, result.getIdentityZone().getId(), result.getIdentityZone().getConfig());
 
@@ -504,7 +539,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Failure_with_Secret_Requires_Digit() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         result.getIdentityZone().getConfig().setClientSecretPolicy(new ClientSecretPolicy(0, 255, 0, 0, 1, 0, 6));
         MockMvcUtils.setZoneConfiguration(webApplicationContext, result.getIdentityZone().getId(), result.getIdentityZone().getConfig());
 
@@ -518,7 +553,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Using_ZonesDotAdmin() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         String clientId = generator.generate();
         BaseClientDetails client = new BaseClientDetails(clientId, "", "openid", GRANT_TYPE_AUTHORIZATION_CODE, "", "http://some.redirect.url.com");
         client.setClientSecret("secret");
@@ -529,7 +564,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientWrite_Using_ZonesDotClientsDotAdmin() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         String id = result.getIdentityZone().getId();
         String clientId = generator.generate();
         BaseClientDetails client = new BaseClientDetails(clientId, "", "", "client_credentials", "zones." + id + ".clients.admin", "http://some.redirect.url.com");
@@ -550,7 +585,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void manageClientInOtherZone_Using_AdminUserTokenFromDefaultZone() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         String zoneId = result.getIdentityZone().getId();
         String clientId = generator.generate();
 
@@ -597,7 +632,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientRead_Using_ZonesDotClientsDotAdmin() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         String id = result.getIdentityZone().getId();
         String clientId = generator.generate();
         BaseClientDetails client = new BaseClientDetails(clientId, "", "", "client_credentials", "zones." + id + ".clients.admin", "http://some.redirect.url.com");
@@ -616,7 +651,7 @@ public class ClientAdminEndpointsMockMvcTests {
     @Test
     void test_InZone_ClientRead_Using_ZonesDotClientsDotRead() throws Exception {
         String subdomain = generator.generate();
-        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null);
+        MockMvcUtils.IdentityZoneCreationResult result = MockMvcUtils.createOtherIdentityZoneAndReturnResult(subdomain, mockMvc, webApplicationContext, null, IdentityZoneHolder.getCurrentZoneId());
         String id = result.getIdentityZone().getId();
         String clientId = generator.generate();
         BaseClientDetails client = new BaseClientDetails(clientId, "", "", "client_credentials", "zones." + id + ".clients.read", "http://some.redirect.url.com");
@@ -669,7 +704,7 @@ public class ClientAdminEndpointsMockMvcTests {
         ClientDetails[] clients = clientArrayFromString(result.andReturn().getResponse().getContentAsString());
         for (ClientDetails client : clients) {
             assertNotNull(getClient(client.getClientId()));
-            assertEquals(new Integer(120), client.getRefreshTokenValiditySeconds());
+            assertEquals(Integer.valueOf(120), client.getRefreshTokenValiditySeconds());
         }
         //create and then update events
         verify(mockApplicationEventPublisher, times(count * 2)).publishEvent(abstractUaaEventCaptor.capture());
@@ -800,7 +835,7 @@ public class ClientAdminEndpointsMockMvcTests {
         for (int i = 0; i < count; i++) {
             ClientDetails c = getClient(details[i].getClientId());
             assertNotNull(c);
-            assertEquals(new Integer(120), c.getRefreshTokenValiditySeconds());
+            assertEquals(Integer.valueOf(120), c.getRefreshTokenValiditySeconds());
 
         }
         for (int i = count; i < (count * 2); i++) {
@@ -1080,6 +1115,82 @@ public class ClientAdminEndpointsMockMvcTests {
             assertFalse(c.isApprovalsDeleted());
         }
 
+    }
+
+    @Nested
+    @DefaultTestContext
+    @ExtendWith(ZoneSeederExtension.class)
+    class WithUserWithClientsSecret {
+        private ZoneSeeder zoneSeeder;
+        private String userAccessToken;
+        private String oldPassword;
+        private TestClient testClient;
+
+        @BeforeEach
+        void setup(ZoneSeeder zoneSeeder, @Autowired TestClient testClient) {
+            this.testClient = testClient;
+            this.zoneSeeder = zoneSeeder
+                    .withDefaults()
+                    .withClientWithImplicitPasswordRefreshTokenGrants("clientId", "clients.secret")
+                    .withClientWithImplicitPasswordRefreshTokenGrants("foobar", "clients.secret")
+                    .withUserWhoBelongsToGroups("ihaveclientssecret@example.invalid", Collections.singletonList("clients.secret"))
+                    .afterSeeding(zs -> {
+                        ScimUser userByEmail = zs.getUserByEmail("ihaveclientssecret@example.invalid");
+
+                        ClientDetails client = zoneSeeder.getClientById("clientId");
+                        oldPassword = zs.getPlainTextClientSecret(client);
+                        userAccessToken = getAccessTokenForUser(
+                                testClient,
+                                userByEmail,
+                                client,
+                                oldPassword,
+                                zs);
+                    });
+        }
+
+        private String getAccessTokenForUser(
+                final TestClient testClient,
+                final ScimUser scimUser,
+                final ClientDetails client,
+                final String oldPassword,
+                final ZoneSeeder zoneSeeder) throws Exception {
+
+            return testClient.getUserOAuthAccessTokenForZone(
+                    client.getClientId(),
+                    oldPassword,
+                    scimUser.getUserName(),
+                    zoneSeeder.getPlainTextPassword(scimUser),
+                    "clients.secret",
+                    zoneSeeder.getIdentityZoneSubdomain());
+        }
+
+        @Test
+        void changeClientIdSecret() throws Exception {
+            SecretChangeRequest request = new SecretChangeRequest("clientId", oldPassword, "someothervalue");
+            MockHttpServletRequestBuilder modifyClientsPost = put("/oauth/clients/clientId/secret")
+                    .headers(zoneSeeder.getZoneSubdomainRequestHeader())
+                    .with(httpBearer(userAccessToken))
+                    .accept(APPLICATION_JSON)
+                    .contentType(APPLICATION_JSON)
+                    .content(JsonUtils.writeValueAsString(request));
+            mockMvc.perform(modifyClientsPost)
+                    .andExpect(status().isOk());
+        }
+
+        @Test
+        void changeFoobarSecret() throws Exception {
+            SecretChangeRequest request = new SecretChangeRequest("foobar", oldPassword, "someothervalue");
+            MockHttpServletRequestBuilder modifyClientsPost = put("/oauth/clients/foobar/secret")
+                    .headers(zoneSeeder.getZoneSubdomainRequestHeader())
+                    .with(httpBearer(userAccessToken))
+                    .accept(APPLICATION_JSON)
+                    .contentType(APPLICATION_JSON)
+                    .content(JsonUtils.writeValueAsString(request));
+            mockMvc.perform(modifyClientsPost)
+                    .andExpect(status().isBadRequest())
+                    .andExpect(content().contentType(APPLICATION_JSON))
+                    .andExpect(content().string("{\"error\":\"invalid_client\",\"error_description\":\"Bad request. Not permitted to change another client's secret\"}"));
+        }
     }
 
     @Test
